<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_deleteStrikeouts"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="10"
        android:title="@string/action_deleteStrikeouts_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_newList"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_newList_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_listSorting"
        android:orderInCategory="105"
        android:title="@string/action_listSorting_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_editListTheme"
        android:orderInCategory="110"
        android:title="@string/action_editListTheme_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manageLists"
        android:orderInCategory="120"
        android:title="@string/action_manageLists_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manageThemes"
        android:orderInCategory="120"
        android:title="@string/action_manageThemes_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="130"
        android:title="@string/action_refresh_title"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!--<item android:id="@+id/action_test_data"-->
        <!--android:orderInCategory="1000"-->
        <!--android:title="Test Data"-->
        <!--app:showAsAction="never" />-->
</menu>
